completion per-request analytics